--- a/Niunan.CaiPiao.Web/appsettings.json
+++ b/Niunan.CaiPiao.Web/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "ConnStr": "Server=localhost;Port=5432;UserId=postgres;Password=123456;Database=caipiao_wlgj;",
+  "ConnStr": "server=localhost;database=caipiao_wlgj;uid=root;pwd=123456;charset=utf8;SslMode=None",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
