--- a/Niunan.CaiPiao.DAL/Niunan.CaiPiao.DAL.csproj
+++ b/Niunan.CaiPiao.DAL/Niunan.CaiPiao.DAL.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.50.4" />
-    <PackageReference Include="Npgsql" Version="3.2.7" />
+    <PackageReference Include="MySql.Data" Version="8.0.12" />
   </ItemGroup>
 
   <ItemGroup>
