PK10猜冠军的BLL写好  自己测试过：后台生成 PK10的期号，前台显示本期倒计时，显示上一期期号，后台可以手工给每一期设置开奖号，前台下注PK10猜冠军，后台所有跟单 列表中显示出来，点兑奖后能够兑奖

--- a/Niunan.CaiPiao.Web/Niunan.CaiPiao.Web.csproj
+++ b/Niunan.CaiPiao.Web/Niunan.CaiPiao.Web.csproj
@@ -127,4 +127,13 @@
     <Folder Include="Areas\Adnn1n\Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Areas\Adnn1n\Views\KaiJiangInfo\Add.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\Adnn1n\Views\XiaZhuInfo\Index.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
+
 </Project>
