--- a/Niunan.CaiPiao.Web/Niunan.CaiPiao.Web.csproj
+++ b/Niunan.CaiPiao.Web/Niunan.CaiPiao.Web.csproj
@@ -131,6 +131,9 @@
     <Content Update="Areas\Adnn1n\Views\KaiJiangInfo\Add.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Areas\Adnn1n\Views\XiaZhuInfo\Add.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Areas\Adnn1n\Views\XiaZhuInfo\Index.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
